Version 0.10.5 (legolas558)
* fixed tags negation bug (found by littlegirl)
* major improvements for Opera support
* minor fixes for other browsers (IE)

Version 0.10.4 (legolas558) released 2010-02-14
* fixed export issue of images (found by D.Strohmayer)
* fixed encryption dialog UI issue (found by M.Ellison)
* fixed encryption pages issues (found by D.De Roock)
* fixed UTF8 encoding/decoding issues
* some CSS improvements

Version 0.10.3 (legolas558) released 2010-02-12
* fixed embedding/import issues with FF3
* fixed some WSIF import issues

Version 0.10.2 (legolas558) released 2010-02-09
* WSIF 1.1.0 format support (import/export)
* other UI improvements/minor bugfixes

Version 0.10.1 (legolas558) released 2010-02-02
* major API1.0 improvements
* fixed file embedding bugs
* fixed file deletion bugs
* fixed tagging bugs
* support for WSIF export and native WSIF (not yet documented)

Version 0.10.0 (legolas558) released 2010-01-31
* fixed XHTML export feature
* fixed tags recognition
* added some core i18n language resources
* general loop optimizations
* re-enabled fix for search focus bug
* added sample WoaS logo to default Main Page
* moved set key menu icon to left of edit menu icon
* incremented text returned in search results
* fixed Special::Dead pages listing which did not show all pages
* added last modified timestamp to all pages
* added image gallery feature to 'Image::' namespace (fbnil)
* fixed image embedding with FF3 (fbnil)

Version 0.9.7 (legolas558 - official - NEVER RELEASED but supported)
* implemented password scrambling
* added multiple tags and tags filtering
* added Duplicate Page feature
* fixed some syntax and editor bugs
* added aliases support (WoaS::Aliases and Special::Aliases command)
* implemented Special::Go To 

Version 0.9.5
* object oriented whole code
* added support of raw transclusion (for SVG for example - not yet working)
* fixed some UI bugs
* added License in <iframe />
* save over network paths also works with IE