@@ -63,6 +63,7 @@ woas['i18n'] = {
 	WSIF_NS_VER: "WSIF version %s not supported!",
 	WSIF_NO_HN: "Could not locate header name",
 	WSIF_BAD_HV: "Could not locate end of header value",
+	ALT_BROWSER_INPUT: "Please specify full path to file \"%s\" because your browser does not allow such path to be read directly for security reasons.",
 	LOADING: "Loading Wiki on a Stick..."
 }
 
